LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__SETTINGS__c/IntroHive__SETTINGS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for the Introhive application</description>
    <label>Introhive Settings</label>
</CustomObject>