LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__SETTINGS__c/fields/IntroHive__ADMIN_EMAIL_del__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__ADMIN_EMAIL_del__c</fullName>
    <description>This will be the email used to call into introhive.</description>
    <inlineHelpText>This will be the email used to call into introhive.</inlineHelpText>
    <label>Introhive Admin Email</label>
    <type>Email</type>
</CustomField>