LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__SETTINGS__c/fields/IntroHive__API_TOKEN__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__API_TOKEN__c</fullName>
    <label>API_TOKEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>