LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__SETTINGS__c/fields/IntroHive__CANVAS_APP__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__CANVAS_APP__c</fullName>
    <defaultValue>&quot;Introhive_Web&quot;</defaultValue>
    <description>The name of the canvas app to be used in the Introhive App</description>
    <label>Canvas App</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>