LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__SETTINGS__c/fields/IntroHive__HOST_URL__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__HOST_URL__c</fullName>
    <defaultValue>&apos;https://app.introhive.com/&apos;</defaultValue>
    <description>This URL points to a specific hosted installation of Introhive used by the Introhive app</description>
    <inlineHelpText>Original:&apos;https://app.introhive.com&apos;</inlineHelpText>
    <label>Host Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>