LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__SETTINGS__c/fields/IntroHive__PANEL_HEIGHT__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__PANEL_HEIGHT__c</fullName>
    <description>The height of the Introhive panel in px.</description>
    <inlineHelpText>Enter a number value here for the height of the Introhive panel Lightning component; empty will default to 600.</inlineHelpText>
    <label>Panel Height</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>